// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`# Extension ## constructor ### should construct default object 1`] = `
Extension {
  "_file": "a",
  "_generator": Object {
    "design": "b",
    "labels": Array [],
    "map": "c",
    "options": "d",
  },
}
`;

exports[`# Extension ## load ### should load template from file 1`] = `
Extension {
  "_file": "a",
  "_generator": Object {
    "design": "b",
    "labels": Array [],
    "map": "c",
    "options": "d",
  },
  "_template": "test template",
}
`;

exports[`# Extension ## template ### should generate extension 1`] = `"test template \\"test\\""`;

exports[`# Extension ## template ### should generate extension 2`] = `"test template "`;

exports[`# Extension ## template ### should generate extension 3`] = `"test template \\"test\\"\\"test2\\""`;
